Update `README.md` to fix java version instruction